[workspace]
resolver = "2"
members = [ "libntgcalls-sys", "ntgcalls" ]

[workspace.package]
authors = ["Gameside <s.gamesides@gmail.com>"]
edition = "2021"
license = "MIT"
keywords = ["telegram", "bot"]
repository = "https://github.com/YouKnow-sys/ntgcalls-rs"
readme = "README.md"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "s"
strip = "symbols"
